Thousand degree hit

--- a/Research.bib
+++ b/Research.bib
@@ -19,7 +19,7 @@
   month={October},
   day={10},
   author={Jacob, Shine},
-  title={Game Programming in \C - For Beginners},
+  title={Game Programming in {C} - For Beginners},
   url={https://codeproject.com/Articles/447332/Game-Programming-in-C-For-Beginners}
 }
 
@@ -39,7 +39,7 @@
 }
 
 @article{singh2015research,
-  title={Research paper on \C language},
+  title={Research paper on {C} language},
   author={Singh, Kawalpreet},
   year={2015},
   publisher={International Journal of Innovative Research in Technology}
@@ -64,4 +64,29 @@
   pages={52},
   year={2010},
   organization={ACM}
+}
+
+@article{xu2017ascii,
+  title={ASCII Art Synthesis from Natural Photographs},
+  author={Xu, Xuemiao and Zhong, Linyuan and Xie, Minshan and Liu, Xueting and Qin, Jing and Wong, Tien-Tsin},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={23},
+  number={8},
+  pages={1910--1923},
+  year={2017},
+  publisher={IEEE}
+}
+
+@electronic{rouse2005ascii,
+  year={2005},
+  month={April},
+  author={Rouse, Margaret},
+  url={http://whatis.techtarget.com/definition/ASCII-American-Standard-Code-for-Information-Interchange},
+  title={ASCII ({American} Standard Code for Information Interchange)}
+}
+
+@electronic{cjrandall2004faq,
+  year={2004},
+  author={CJRandall},
+  title={{ALT.ASCII-Art}: Frequently Asked Questions}
 }
