--- a/Research.bib
+++ b/Research.bib
@@ -90,3 +90,16 @@
   author={CJRandall},
   title={{ALT.ASCII-Art}: Frequently Asked Questions}
 }
+
+@electronic{nagle2001,
+  year={2001},
+  author={Nagle, Robert},
+  title={Enrichment Games and Instructional Design},
+  url={http://www.imaginaryplanet.net/essays/literary/games/games6.php}
+}
+
+@electronic{evans2008,
+  year={2008},
+  title={Teens, Video Games and Civics},
+  author={Lenhart, A and Kahne, J and Middaugh, E and Macgill, A and Evans, C and Vitak, J.},
+}
